--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -14,15 +14,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="row">
-					<div class="col-md-4 text-center bottom-xs-pad-30">
+					<div class="col-md-4 bottom-xs-pad-30">
 						<!-- Image -->
 						<img src="{{ asset('bundles/site/images/doctors.jpg') }}" width="280" height="440" alt="">
 					</div>
 					<div class="col-md-8">
-						<div class="section-title text-center">
+						<div class="section-title text-left">
 							<h2 class="title">Superior Quality Patient-Centered Services</h2>
 						</div>
-						<p><span class="lead">{{ company_name }}, LLC is a young organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 600 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and cover more than 35,000 patients.</p>
+						<p><span class="lead">{{ company_name }} is a young organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 600 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and cover more than 35,000 patients.</p>
 						<p>Clinical Integration is key to improving healthcare quality while eliminating inefficient spending, and SHP's physician-led network offers the tools necessary to deliver best practice patient care.</p>
 					</div>
 				</div>
