--- a/src/SiteBundle/Resources/views/About/executiveTeam.html.twig
+++ b/src/SiteBundle/Resources/views/About/executiveTeam.html.twig
@@ -30,11 +30,12 @@
 								<!-- Name -->
 								<h2 class="name">Tiffany Nelson</h2>
 								<!-- Designation -->
-								<p class="role">MD, Chief Strategy Officer</p>
+								<p class="role">MD</p>
 								<p><a href="#tiffany-nelson" data-toggle="modal" data-target="#tiffany-nelson"><i class="fa fa-info-circle fa-2x white"></i></a></p>
 							</div>
 						</div>
 					</div>
+					<h6>Chief Strategy Officer</h6>
 				</div>
 				<!-- .employee  -->
 				<div class="col-sm-4 col-md-3 icons-hover-color bottom-xs-pad-20 info-thumb-container">
@@ -48,11 +49,12 @@
 								<!-- Name -->
 								<h2 class="name">James Whitfill</h2>
 								<!-- Designation -->
-								<p class="role">MD, Chief Medical Officer</p>
+								<p class="role">MD</p>
 								<p><a href="#james-whitfill" data-toggle="modal" data-target="#james-whitfill"><i class="fa fa-info-circle fa-2x white"></i></a></p>
 							</div>
 						</div>
 					</div>
+					<h6>Chief Medical Officer</h6>
 				</div>
 				<!-- .employee -->
 				<div class="col-sm-4 col-md-3 icons-hover-color bottom-xs-pad-20 info-thumb-container">
@@ -66,11 +68,12 @@
 								<!-- Name -->
 								<h2 class="name">Faron Thompson</h2>
 								<!-- Designation -->
-								<p class="role">MBA, Chief Operating Officer</p>
+								<p class="role">MBA</p>
 								<p><a href="#faron-thompson" data-toggle="modal" data-target="#faron-thompson"><i class="fa fa-info-circle fa-2x white"></i></a></p>
 							</div>
 						</div>
 					</div>
+					<h6>Chief Operating Officer</h6>
 				</div>
 				<!-- .employee -->
 				<div class="col-sm-4 col-md-3 icons-hover-color bottom-xs-pad-20 info-thumb-container">
@@ -82,14 +85,15 @@
 						<div class="description-container">
 							<div class="description">
 								<!-- Name -->
-								<h2 class="name">Karen R Vanaskie</h2>
+								<h2 class="name">Karen Vanaskie</h2>
 								<!-- Designation -->
-								<p class="role">DNP, MSN, RN, Care Management Program Director</p>
+								<p class="role">DNP, MSN, RN</p>
 								<p><a href="#karen-r-vanaskie" data-toggle="modal" data-target="#karen-r-vanaskie"><i class="fa fa-info-circle fa-2x white"></i></a></p>
 							</div>
 						</div>
 					</div>
 				</div>
+				<h6>Care Management Program Director</h6>
 			</div>
 		</div>
 	</section>
@@ -150,7 +154,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						<h3 id="myModalLabel">Karen R Vanaskie <span>DNP, MSN, RN, Care Management Program Director</span></h3>
+						<h3 id="myModalLabel">Karen Vanaskie <span>DNP, MSN, RN, Care Management Program Director</span></h3>
 					</div>
 					<div class="modal-body">
 						<p>Karen Vanaskie currently serves as Care Management Program Director for {{ company_name }}. Over the span of her career, Karen holds 30 years of nursing experience along with extensive experience in acute care settings, home health, multi-specialty medical groups, independent physician associations, and managed care organizations. Karen has spent her nursing leadership career developing case management programs, overseeing quality of care, infection control, and risk management activities, and serving as a chief nursing officer. Karen’s formal education includes earning a Baccalaureate Degree in the Science of Nursing (B.S.N.), a Master’s Degree in the Science of Nursing (M.S.N.), and a Doctorate in Nursing Practice (D.N.P).</p>
