--- a/src/SiteBundle/Resources/views/About/missionVisionValues.html.twig
+++ b/src/SiteBundle/Resources/views/About/missionVisionValues.html.twig
@@ -18,12 +18,12 @@
 						<!-- Heading -->
 						<h2 class="title">Mission</h2>
 					</div>
-					<p>{{ company_name }}, LLC is a collaboration of medical professionals and a healthcare system which provides high quality, coordinated and innovative care for the patients and families we serve.</p>
+					<p>{{ company_name }} is a collaboration of medical professionals and a healthcare system which provides high quality, coordinated and innovative care for the patients and families we serve.</p>
 					<div class="section-title text-left">
 						<!-- Heading -->
 						<h2 class="title">Vision</h2>
 					</div>
-					<p>{{ company_name }}, LLC will transform healthcare through coordinated, patient centered care of the highest quality and value.</p>
+					<p>{{ company_name }} will transform healthcare through coordinated, patient centered care of the highest quality and value.</p>
 				</div>
 				<div class="col-sm-6 col-md-6">
 					<div class="section-title text-left">
