--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -45,7 +45,7 @@
 				<div class="col-md-4 text-center bottom-xs-pad-30">
 					<!-- Image -->
 					{#<img src="{{ asset('bundles/site/images/doctors.jpg') }}" width="280" height="440" alt="">#}
-					{{ block('pe_testimonials') }}
+					{{ block('pe_patient_testimonials') }}
 				</div>
 				<div class="col-md-8">
 					{# MOVING THIS TO SPAN BOTH COLUMNS FOR A MORE EVEN FEEL #}
