--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -209,18 +209,21 @@ ul.list-style{
 }
 ul.list-style li{
 	position:relative;
-	line-height:1;
+	line-height:1em;
 	list-style: none;
 	padding-top:5px;
 	padding-bottom:5px;
+	margin-left: 13px;
 }
 
 ul.list-style li::before {
 	content: "•";
 	font-size: 0.75em;
-	margin-right: 10px;
+	margin-left: -3px;
 	position: relative;
+	line-height: 2em;
 	top: -2px;
+	left: -10px;
 }
 
 .arrow-style {
@@ -716,6 +719,18 @@ i.fa-1x{
 *******************************************************************************/
 .no-pad{
 	padding:0 !important;
+}
+.no-pad-top{
+	padding-top:0;
+}
+.no-pad-right{
+	padding-right:0;
+}
+.no-pad-bottom{
+	padding-bottom:0;
+}
+.no-pad-left{
+	padding-left:0;
 }
 .no-margin {
 	margin: 0 !important;
