--- a/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
@@ -1,7 +1,39 @@
+{% set title = 'Our Philosophy' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:ForPatients:ourPhilosophy{% endblock %}
 
 {% block body %}
-<h1>Welcome to the ForPatients:ourPhilosophy page</h1>
+	<div class="page-header">
+		<div class="container">
+			<h1 class="title">{{ title }}</h1>
+		</div>
+	</div>
+	<section id="our-philosophy" class="page-section no-pad-bottom">
+		<div class="container">
+			<div class="section-title text-left">
+				<h2 class="title">Highest Quality Value</h2>
+			</div>
+			<h5>SHP is committed to delivering the highest quality and value of patient care to our community.</h5>
+			<div class="row">
+				<div class="col-md-4 visible-md visible-lg">
+					<!-- Image -->
+					<img src="{{ asset('bundles/site/images/sections/bg/thinker.png') }}" width="100%" alt="">
+				</div>
+				<div class="col-md-8">
+					<ul class="list-style">
+						<label class="lead">We believe these results are achieved through:</label>
+						<li>Strong relationships between primary care providers and patients</li>
+						<li>Following evidence-based care guidelines</li>
+						<li>Providing care coordination services for patients to help them better navigate the complexity of healthcare and achieve their health goals</li>
+						<li>Collaborating, coordinating and communicating within a tightly integrated community of care providers</li>
+						<li>Obtaining, analyzing, and leveraging clinical and quality data for better health outcomes</li>
+					</ul>
+					<p>Our providers understand the importance of taking time to provide value-based care for each patient.</p>
+					<p>When healthcare providers focus on quality rather than quantity, this results in effective care for each patient and much more efficient use of financial resources.</p>
+					<div class="col-xs-12 visible-xs visible-sm pad-60"></div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
