--- a/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
@@ -1,7 +1,48 @@
+{% set title = 'Insurance Plans' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:ForPatients:insurancePlans{% endblock %}
 
 {% block body %}
-<h1>Welcome to the ForPatients:insurancePlans page</h1>
+	<div class="page-header">
+		<div class="container">
+			<h1 class="title">{{ title }}</h1>
+		</div>
+	</div>
+	<section id="insurance-plans" class="page-section">
+		<div class="container text-center">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="lead">Scottsdale Health Partners is associated with the following insurance plans:</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-2 col-sm-offset-1">
+					<div class="col-sm-12 light-bg border-color pad-10 bottom-margin-10">
+						<img src="{{ asset('bundles/site/images/sections/insurance/blue-cross-blue-shield.png') }}" width="100%" alt="Blue Cross Blue Shield" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<ul><li>HonorHealth Employee Plan</li></li>Medicare Advantage</li><li>Alliance</li></ul>" />
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-2">
+					<div class="col-sm-12 light-bg border-color pad-10 bottom-margin-10">
+						<img src="{{ asset('bundles/site/images/sections/insurance/cigna.png') }}" width="100%" alt="Cigna" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<ul><li>Open Access Plus</li><li>Local Plus</li></ul>" />
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-2">
+					<div class="col-sm-12 light-bg border-color pad-10 bottom-margin-10">
+						<img src="{{ asset('bundles/site/images/sections/insurance/humana.png') }}" width="100%" alt="Humana" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<ul><li>Humana Gold Plus</li></ul>" />
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-2">
+					<div class="col-sm-12 light-bg border-color pad-10 bottom-margin-10">
+						<img src="{{ asset('bundles/site/images/sections/insurance/medicare.png') }}" width="100%" alt="Medicare" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<ul><li>Medicare FFS</li></ul>" />
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-2">
+					<div class="col-sm-12 light-bg border-color pad-10 bottom-margin-10">
+						<img src="{{ asset('bundles/site/images/sections/insurance/meritus.png') }}" width="100%" alt="Meritus" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<ul><li>Meritus HMO</li></ul>" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
