added link to find doctor on insurance page.

--- a/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
@@ -13,7 +13,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="lead">Scottsdale Health Partners is associated with the following insurance plans:</p>
+					<p class="lead">{{ company_name }} is associated with the following insurance plans:</p>
 				</div>
 			</div>
 			<div class="row">
@@ -45,4 +45,14 @@
 			</div>
 		</div>
 	</section>
+	<!-- addition-info -->
+	<div id="learn-more" class="light-bg call-to-action black text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<a class="black" href="{{ path('physician_directory') }}">Find an SHP doctor</a> near you
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
