--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -95,7 +95,7 @@
 							 data-endspeed="500"
 							 data-endeasing="Power1.easeIn"
 							 style="max-width: 600px; text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
-							<p>Click here to login or to request access<br/>to the SHP physician member website.</p>
+							<p><a href="http://www.scottsdalehealthpartners.com/"><strong class="text-color">Click here</strong></a> to login or to request access<br/>to the SHP physician member website.</p>
 						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/slider/slide-3-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
@@ -113,7 +113,7 @@
 {% block pe_special_features %}
 	<div class="row special-feature">
 		<!-- Special Feature Box 1 -->
-		<div class="col-md-3">
+		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
 				<a href="{{ path('physician_directory') }}">
 					<div class="mask-top">
@@ -133,9 +133,9 @@
 			</div>
 		</div>
 		<!-- Special Feature Box 2 -->
-		<div class="col-md-3">
+		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
-				<a href="">
+				<a href="#">
 					<div class="mask-top">
 						<!-- Icon -->
 						<i class="fa fa-hospital-o"></i>
@@ -153,7 +153,7 @@
 			</div>
 		</div>
 		<!-- Special Feature Box 3 -->
-		<div class="col-md-3">
+		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
 				<a href="{{ path('insurance_plans') }}">
 					<div class="mask-top">
@@ -168,13 +168,12 @@
 						<h4>Insurance Plans</h4>
 						<!-- Text -->
 						<p>{{ company_name }} has contracts with major insurance companies.</p>
-						<p><a href="">Learn more</a></p>
 					</div>
 				</a>
 			</div>
 		</div>
 		<!-- Special Feature Box 3 -->
-		<div class="col-md-3">
+		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
 				<a href="https://scottsdalehealthpartners.com/">
 					<div class="mask-top">
@@ -189,7 +188,7 @@
 						<h4>Members</h4>
 						<!-- Text -->
 						<p>Would you like to know more about joining the SHP network?</p>
-						<p><a href="#">Log in</a> or <a href="#">request access</a> to the SHP Physician Member website.</p>
+						<p><strong>Log in</strong> or <strong>request access</strong> to the SHP Physician Member website.</p>
 					</div>
 				</a>
 			</div>
