--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -147,7 +147,7 @@
 						<!-- Title -->
 						<h4>Hospitals</h4>
 						<!-- Text -->
-						<p>{{ company_name }} is aligned with 5 hospitals in the Phoenix area</p>
+						<p>{{ company_name }} is aligned with 5 quality hospitals in the Phoenix area</p>
 					</div>
 				</a>
 			</div>
@@ -187,7 +187,7 @@
 						<!-- Title -->
 						<h4>Members</h4>
 						<!-- Text -->
-						<p>Would you like to know more about joining the SHP network?</p>
+						<p>Would you like to know more about joining the SHP physician network?</p>
 						<p><strong>Log in</strong> or <strong>request access</strong> to the SHP Physician Member website.</p>
 					</div>
 				</a>
