--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -113,77 +113,28 @@
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Pediatric Clinic</h5>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Consistently</h5>
 						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
+						<div>Improved Quality Scores</div>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Adolescent Gynecology</h5>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> High</h5>
 						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
+						<div>Patient Satisfaction Scores</div>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Breast Center</h5>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> 2% - 10%</h5>
 						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Children (Pediatrics)</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Eye (Ophtalmology)</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> General Surgery</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Physiotherapy</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Pregnancy Care</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
-					</a>
-				</div>
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
-						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Diabetes</h5>
-						<!-- Text -->
-						<div>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.</div>
+						<div>Annual Cost Improvement</div>
 					</a>
 				</div>
 			</div>
-			<div class="clearfix"></div>
 		</div>
 	</section>
 	<!-- Features -->
